...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:gravity="center"
            android:text="Username"/>

        <TextView
            android:id="@+id/addressText"
            style="@style/mediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:maxWidth="@dimen/profile_width"
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="@dimen/padding">
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@android:color/transparent"/>
        <TextView
            android:id="@+id/noDataText"
            style="@style/bigText"
...
